--- a/RLE/Makefile
+++ b/RLE/Makefile
@@ -1,18 +1,12 @@
-CPP         := g++.exe
 CC			:= gcc
-CFLAGS		:= -Wall -Wextra -Werror -Ofast -std=gnu99 -m32
+CFLAGS		:= -Wall -Wextra -Werror -Ofast -std=gnu99
 SRC			:= $(wildcard src/*.c)
 OBJ			:= $(SRC:%.c=%.o)
 BIN			:= rle
 BIN_PATH	:= /usr/local/bin
-LIBS        := -L"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib32" -static-libgcc -m32
-INCS     	:= -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  	:= -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-CXXFLAGS 	:= $(CXXINCS) -m32
-
 
 $(BIN): $(OBJ)
-	$(CC) $(CFLAGS) -I./inc $(INCS) $(OBJ) -o $@ $(LIBS)
+	$(CC) $(CFLAGS) -I./inc $(OBJ) -o $@
 
 clean:
 	rm -f $(OBJ) $(BIN)
@@ -26,4 +20,4 @@ uninstall:
 	rm -f $(BIN_PATH)/$(BIN)
 
 src/%.o: src/%.c inc/rle.h
-	$(CC) $(CFLAGS) $(INCS) $(CXXFLAGS) -I./inc -c $< -o $@
+	$(CC) $(CFLAGS) -I./inc -c $< -o $@
