--- a/RLE/Makefile.win
+++ b/RLE/Makefile.win
@@ -1,29 +1,33 @@
-CPP         := g++.exe
-CC			:= gcc
-CFLAGS		:= -Wall -Wextra -Werror -Ofast -std=gnu99 -m32
-SRC			:= $(wildcard src/*.c)
-OBJ			:= $(SRC:%.c=%.o)
-BIN			:= rle
-BIN_PATH	:= /usr/local/bin
-LIBS        := -L"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib32" -static-libgcc -m32
-INCS     	:= -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
-CXXINCS  	:= -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-CXXFLAGS 	:= $(CXXINCS) -m32
+# Project: Rle_Console
+# Makefile created by Dev-C++ 5.11
 
+# This Makefile is written for syntax check!
+# Regenerate it if you want to use this Makefile to build.
+
+CPP      = g++.exe
+CC       = gcc.exe
+WINDRES  = windres.exe
+OBJ      = src/main.o src/rle.o
+LINKOBJ  = src/main.o src/rle.o
+LIBS     = -L"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib32" -static-libgcc -m32
+INCS     = -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
+CXXINCS  = -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"V:/PAPP/PortableApps/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
+BIN      = Rle_Console.exe
+CXXFLAGS = $(CXXINCS) -fsyntax-only -m32
+CFLAGS   = $(INCS) -fsyntax-only -m32
+RM       = rm.exe -f
+
+.PHONY: all all-before all-after clean clean-custom $(OBJ) $(BIN)
+
+all: all-before $(BIN) all-after
+
+clean: clean-custom
+	${RM} $(OBJ) $(BIN)
 
 $(BIN): $(OBJ)
-	$(CC) $(CFLAGS) -I./inc $(INCS) $(OBJ) -o $@ $(LIBS)
 
-clean:
-	rm -f $(OBJ) $(BIN)
+src/main.o: src/main.c
+	$(CC) -c src/main.c $(CFLAGS)
 
-install: $(BIN)
-	install rle $(BIN_PATH)
-
-re: clean $(BIN)
-
-uninstall:
-	rm -f $(BIN_PATH)/$(BIN)
-
-src/%.o: src/%.c inc/rle.h
-	$(CC) $(CFLAGS) $(INCS) $(CXXFLAGS) -I./inc -c $< -o $@
+src/rle.o: src/rle.c
+	$(CC) -c src/rle.c $(CFLAGS)
